appId: de.codext.opencctv
---
- setOrientation: PORTRAIT
- stopApp
- openLink: ${LINK}
- runFlow:
    when:
      visible: 'Open in .*'
    commands:
      - tapOn: Open
- waitForAnimationToEnd:
    timeout: 1500
- runFlow:
    when:
      visible: 'Open in .*'
    commands:
      - tapOn: Open
- runFlow:
    when:
      true: ${WAIT_ID != ''}
    commands:
      - extendedWaitUntil:
          visible:
            id: ${WAIT_ID}
          timeout: 45000
- runFlow:
    when:
      true: ${WAIT_TEXT != ''}
    commands:
      - extendedWaitUntil:
          visible: ${WAIT_TEXT}
          timeout: 45000
- waitForAnimationToEnd:
    timeout: ${SETTLE}
- takeScreenshot: ${OUT}/${NAME}
